feat: 添加 SesameCactus (仙人掌) 完整代码
基于 YukiHookAPI 重构的芝麻粒增强版，主要变更：
- 集成 YukiHookAPI Kotlin 框架替代原始 XposedBridge
- 新增 Kotlin Hook 模块 (AlipayAccountHooker/AlipayCaptchaHooker/SesameHooker)
- 新增「长生界」Alpha 模块 (网商银行/福气鱼塘/余额宝等)
- 新增 AI 答题多模型支持 (DeepSeek/OpenAI/Qwen/Gemini)
- 新增备份还原 (WebDAV)、消息推送 (WxPusher/Telegram)
- 新增扩展系统 Alpha 增强版
- UI 重构 (Material Design / ViewPager / AlphaActivity)
- 账号限制突破 (>5账户) 和验证码绕过
- 应用更名为「仙人掌」(Cactus)
Co-authored-by: monkeycode-ai <monkeycode-ai@chaitin.com>